--- a/ExamenLenInterp1-main/index.html
+++ b/ExamenLenInterp1-main/index.html
@@ -41,7 +41,7 @@
         <h2 class="quien">PROXIMOS PARTIDOS</h2>
         <div class="fechaspartidos">
             <img src="atlasimg/leonfc.png" alt="leon" class="escudocontr">
-            <p class="textgenerico">Atlas FC vs Club Leon </p> <p>11 de Marzo del 2023</p> <button class="boton btn1 textnorm">Comprar boletos</button><p class="border"></p>
+            <p class="textgenerico">Atlas FC vs Club León </p> <p>11 de Marzo del 2023</p> <button class="boton btn1 textnorm">Comprar boletos</button><p class="border"></p>
             <br class="border">
             <img src="atlasimg/olimpiafc.png" alt="leon" class="escudocontr">
             <p class="textgenerico">Atlas FC vs Club Deportivo Olimpia </p> <p>14 de Marzo del 2023</p> <button class="boton btn2 textnorm">Comprar boletos</button><p class="border"></p>
