--- a/ExamenLenInterp1-main/juego.html
+++ b/ExamenLenInterp1-main/juego.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <script defer src="juego.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -18,9 +19,29 @@
         <h1 class="NombrePrincipal">ADIVINA EL COLOR</h1>
     </header>
 
-    <section>
+    <div class="contjego">
+        <div class="juegoreal">
+            <div class="top">
+                <h1 class="quien">ADIVINA EL COLOR HEXADECIMAL <br/><span id="hexcolor"></span></h1>
+                <div id="raya">
+                    <button id="resetear" class="btnjuego">Nuevos Colores</button>
+                    <span id="mensaje"></span>
+                    <span id="scoremes"></span>
+                </div>
+            </div>
 
-    </section>
+        </div>
+
+    </div>
+
+    <div class="realjuego">
+        <div class="rect"></div>
+        <div class="rect"></div>
+        <div class="rect"></div>
+
+    </div>
+
+    <section><h1>-</h1></section>
 
     <footer class="main-footer">
         <div class="main-footer-container">
