--- a/ExamenLenInterp1-main/juego.html
+++ b/ExamenLenInterp1-main/juego.html
@@ -38,9 +38,10 @@
         <div class="rect"></div>
         <div class="rect"></div>
         <div class="rect"></div>
-
+        <br>
     </div>
-
+    
+    <div>br</div>
     <section><h1>-</h1></section>
 
     <footer class="main-footer">
