--- a/ExamenLenInterp1-main/juego.html
+++ b/ExamenLenInterp1-main/juego.html
@@ -50,7 +50,9 @@
             <ul class="nav footer-nav">
                 <li><a href="https://github.com/rofotrofo" target="_blank"><img class="footer-icon" src="atlasimg/github.png" alt="Github"></a></li>
                 <li><a href="https://www.youtube.com/channel/UC9c4_0fJ7NyFirTGd3or3RA" target="_blank"><img class="footer-icon" src="atlasimg/youtube.png" alt="Youtube"></a></li>
+                <li><a href="https://docs.google.com/document/d/1b_iRdYh89Iq5dgX7sHyi_n1326XcR_Tx_xe6jpp2iG0/edit?usp=sharing" target="_blank"><img class="footer-icon" src="atlasimg/ref.png" alt="referencias"></a></li>
             </ul>
+            <li><a href="https://www.w3schools.com/howto/howto_js_slideshow.asp"></a></li>
         </div>
     </footer>
 </body>
